--- a/photo.html
+++ b/photo.html
@@ -10,6 +10,7 @@
     <div class="container">
       <header class="page-header">
         <nav class="page-header__nav">
+          <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
           <ul class="site-list">
             <li class="site-list__item">
               <a class="site-list__link" href="index.html">Главная</a>
@@ -26,16 +27,15 @@
           </ul>
         </nav>
         <div class="page-header__wrapper">
-          <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
           <a class="page-header__logo" href="index.html">
-            <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Седона">
+            <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
           </a>
         </div>
       </header>
       <main class="page-main">
         <section class="intro intro--mini">
           <h1 class="visually-hidden">Седона</h1>
-          <img class="intro__title" src="http://placehold.it/150x100" width="150" height="100" alt="Седона">
+          <img class="intro__title" src="img/text-sedona.svg" width="329" height="39" alt="Седона">
         </section>
         <section class="media">
           <h2 class="media__title">Фото и видео</h2>
@@ -44,11 +44,11 @@
           </p>
           <article class="photo">
             <figure class="photo__figure">
-              <img class="photo__image" src="http://placehold.it/150x100" width="150" height="100" alt="Народные просторы">
+              <img class="photo__image photo__image--first" src="http://placehold.it/150x100" alt="Народные просторы">
               <figcaption class="photo__caption">
                 <div class="photo-wrapper">
                   <p class="photo__name">
-                    Софийский собор
+                    Неродные просторы
                   </p>
                   <p class="photo__author">
                     Автор фото: Борис
@@ -63,7 +63,7 @@
           </article>
           <article class="photo">
             <figure class="photo__figure">
-              <img class="photo__image" src="http://placehold.it/150x100" width="150" height="100" alt="Местная растительность">
+              <img class="photo__image" src="http://placehold.it/150x100" alt="Местная растительность">
               <figcaption class="photo__caption">
                 <div class="photo-wrapper">
                   <p class="photo__name">
@@ -82,7 +82,7 @@
           </article>
           <article class="photo">
             <figure class="photo__figure">
-              <img class="photo__image" src="http://placehold.it/150x100" width="150" height="100" alt="Дорога на север">
+              <img class="photo__image" src="http://placehold.it/150x100" alt="Дорога на север">
               <figcaption class="photo__caption">
                 <div class="photo-wrapper">
                   <p class="photo__name">
@@ -101,7 +101,7 @@
           </article>
           <article class="photo">
             <figure class="photo__figure">
-              <img class="photo__image" src="http://placehold.it/150x100" width="150" height="100" alt="Мост дьявола">
+              <img class="photo__image" src="http://placehold.it/150x100" alt="Мост дьявола">
               <figcaption class="photo__caption">
                 <div class="photo-wrapper">
                   <p class="photo__name">
@@ -142,19 +142,19 @@
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link social__link--twitter" href="https://vk.com/htmlacademy">Мы в Твиттере</a>
+              <a class="social__link social__link--twitter button" href="#"><span class="visually-hidden">Мы в Твиттере</span></a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+              <a class="social__link social__link--facebook button" href="#"><span class="visually-hidden">Мы в Фейсбуке</span></a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--youtube" href="https://www.instagram.com/htmlacademy">Мы в Ютубе</a>
+              <a class="social__link social__link--youtube button" href="#"><span class="visually-hidden">Мы в Ютубе</span></a>
             </li>
           </ul>
         </div>
         <div class="page-footer__copyright copyright">
-          <p class="copyright__text">Разработано:</p>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          <p class="copyright__text">Разработано</p>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span></a>
         </div>
       </footer>
     </div>
