--- a/form.html
+++ b/form.html
@@ -10,6 +10,7 @@
     <div class="container">
       <header class="page-header">
         <nav class="page-header__nav">
+          <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
           <ul class="site-list">
             <li class="site-list__item">
               <a class="site-list__link" href="index.html">Главная</a>
@@ -26,16 +27,15 @@
           </ul>
         </nav>
         <div class="page-header__wrapper">
-          <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
           <a class="page-header__logo" href="index.html">
-            <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Седона">
+            <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
           </a>
         </div>
       </header>
       <main class="page-main">
         <section class="intro intro--mini">
           <h1 class="visually-hidden">Седона</h1>
-          <img class="intro__title" src="http://placehold.it/150x100" width="150" height="100" alt="Седона">
+          <img class="intro__title" src="img/text-sedona.svg" width="329" height="39" alt="Седона">
         </section>
         <section class="feedback">
           <h2 class="feedback__title">Оставьте свой отзыв</h2>
@@ -54,7 +54,7 @@
                 <input class="user-information__input" type="text" id="second-name" name="second-name" placeholder="Иванов">
               </div>
               <div class="user-information__wrapper">
-                <label class="user-information__label" for="patronymic">Отчество<sup>*</sup>:</label>
+                <label class="user-information__label" for="patronymic">Отчество:</label>
                 <input class="user-information__input" type="text" id="patronymic" name="patronymic" placeholder="Александрович">
               </div>
             </div>
@@ -72,42 +72,45 @@
             <div class="form__item radio">
               <h3 class="form__title form__title--radio">Ваше общее впечатление:</h3>
               <div class="radio__wrapper">
-                <input class="radio__input" type="radio" id="positive" name="impression" value="positive" checked>
+                <input class="radio__input visually-hidden" type="radio" id="positive" name="impression" value="positive" checked>
                 <label class="radio__label" for="positive">Скорее положительное</label>
               </div>
               <div class="radio__wrapper">
-                <input class="radio__input" type="radio" id="negative" name="impression" value="negative">
+                <input class="radio__input visually-hidden" type="radio" id="negative" name="impression" value="negative">
                 <label class="radio__label" for="negative">Скорее отрицательное</label>
               </div>
               <div class="radio__wrapper">
-                <input class="radio__input" type="radio" id="indefinite" name="impression" value="indefinite">
+                <input class="radio__input visually-hidden" type="radio" id="indefinite" name="impression" value="indefinite">
                 <label class="radio__label" for="indefinite">Затрудняюсь ответить</label>
               </div>
             </div>
             <div class="form__item checkbox">
               <h3 class="form__title form__title--checkbox">Посещенные достопримечательности:</h3>
               <div class="checkbox__wrapper">
-                <input class="checkbox__input" type="checkbox" id="bridge" name="bridge" checked>
+                <input class="checkbox__input visually-hidden" type="checkbox" id="bridge" name="bridge" checked>
                 <label class="checkbox__label" for="bridge">Мост Дьявола</label>
               </div>
               <div class="checkbox__wrapper">
-                <input class="checkbox__input" type="checkbox" id="park" name="park" checked>
+                <input class="checkbox__input visually-hidden" type="checkbox" id="park" name="park" checked>
                 <label class="checkbox__label" for="park">Слайд-парк</label>
               </div>
               <div class="checkbox__wrapper">
-                <input class="checkbox__input" type="checkbox" id="mountain" name="mountain">
+                <input class="checkbox__input visually-hidden" type="checkbox" id="mountain" name="mountain">
                 <label class="checkbox__label" for="mountain">Гора-Колокол</label>
               </div>
               <div class="checkbox__wrapper">
-                <input class="checkbox__input" type="checkbox" id="cliffs" name="cliffs" checked>
+                <input class="checkbox__input visually-hidden" type="checkbox" id="cliffs" name="cliffs" checked>
                 <label class="checkbox__label" for="cliffs">Красные скалы</label>
               </div>
             </div>
             <div class="form__item textarea">
-              <h3 class="form__title">Опишите свои эмоции:</h3>
+              <h3 class="form__title form__title--textarea">Опишите свои эмоции:</h3>
               <textarea class="textarea__input" name="feeling" id="feeling" rows="5" placeholder="Опишите подробно все свои восторги"></textarea>
             </div>
-            <button class="form__button button" type="submit">Отправить отзыв</button>
+            <div class="form__wrapper">
+              <button class="form__button button" type="submit">Отправить отзыв</button>
+              <p class="form-footnote form-footnote--display-none"><sup>*</sup> &mdash; обязательные поля</p>
+            </div>
           </form>
         </section>
       </main>
@@ -118,34 +121,34 @@
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link social__link--twitter" href="https://vk.com/htmlacademy">Мы в Твиттере</a>
+              <a class="social__link social__link--twitter button" href="#"><span class="visually-hidden">Мы в Твиттере</span></a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+              <a class="social__link social__link--facebook button" href="#"><span class="visually-hidden">Мы в Фейсбуке</span></a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--youtube" href="https://www.instagram.com/htmlacademy">Мы в Ютубе</a>
+              <a class="social__link social__link--youtube button" href="#"><span class="visually-hidden">Мы в Ютубе</span></a>
             </li>
           </ul>
         </div>
         <div class="page-footer__copyright copyright">
-          <p class="copyright__text">Разработано:</p>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          <p class="copyright__text">Разработано</p>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span></a>
         </div>
       </footer>
-      <section class="modal modal--failure display-none">
-        <h2 class="modal__title">Что-то пошло не так!</h2>
-        <p class="modal__description">
+      <section class="modal-failure display-none">
+        <h2 class="modal-failure__title">Что-то пошло не так!</h2>
+        <p class="modal-failure__description">
           Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
         </p>
-        <button class="modal__button modal__button--failure button">OK</button>
+        <button class="modal-failure__button button">OK</button>
       </section>
-      <section class="modal modal--success display-none">
-        <h2 class="modal__title">Ваш отзыв отправлен!</h2>
-        <p class="modal__description">
+      <section class="modal-success display-none">
+        <h2 class="modal-success__title">Ваш отзыв отправлен!</h2>
+        <p class="modal-success__description">
           Спасибо за ваше участие, ваш отзыв уже поступил к нам.<br>В ближайшее время мы опубликуем его на сайте.
         </p>
-        <button class="modal__button modal__button--success button">Закрыть окно</button>
+        <button class="modal-success__button button">Закрыть окно</button>
       </section>
     </div>
   </body>
