--- a/form.html
+++ b/form.html
@@ -28,14 +28,18 @@
         </nav>
         <div class="page-header__wrapper">
           <a class="page-header__logo" href="index.html">
-            <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+              <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+            </picture>
           </a>
         </div>
       </header>
       <main class="page-main">
         <section class="intro intro--mini">
           <h1 class="visually-hidden">Седона</h1>
-          <img class="intro__title" src="img/text-sedona.svg" width="329" height="39" alt="Седона">
+          <img class="intro__title" src="img/text-sedona.svg" width="229" height="39" alt="Седона">
         </section>
         <section class="feedback">
           <h2 class="feedback__title">Оставьте свой отзыв</h2>
