--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         </nav>
         <div class="page-header__wrapper">
           <a class="page-header__logo">
-            <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+              <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+            </picture>
           </a>
         </div>
       </header>
@@ -52,7 +56,11 @@
                 Седона не аттракцион для туристов, там течет своя жизнь
               </p>
             </div>
-            <img class="reasons__image" src="http://placehold.it/150x100">
+            <picture class="reasons__picture">
+              <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg 1x, img/main-city-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg 1x, img/main-city-tablet@2x.jpg 2x">
+              <img class="reasons__image reasons__image--town" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg 2x" width="320" height="260" alt="Настоящий городок">
+            </picture>
           </div>
           <section class="recommendations">
             <h2 class="visually-hidden">Рекомендации</h2>
@@ -85,7 +93,11 @@
                 Да, по нему можно пройти! Если вы осмелитесь, конечно
               </p>
             </div>
-            <img class="reasons__image" src="http://placehold.it/150x100">
+            <picture class="reasons__picture">
+              <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg 1x, img/main-bridge-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
+              <img class="reasons__image reasons__image--bridge" src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@2x.jpg 2x" width="320" height="260" alt="Мост дьявола">
+            </picture>
           </div>
           <div class="reasons__wrapper">
             <div class="reasons__item">
@@ -124,7 +136,11 @@
           </p>
           <a class="hotel-search__button button" href="#">Найти гостиницу</a>
           <div class="hotel-search__map">
-            <img src="img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Карта">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg 2x">
+              <img src="img/bg-map-mobile@1x.jpg" srcset="img/bg-map-mobile@2x.jpg 2x" width="320" height="350" alt="Карта">
+            </picture>
           </div>
         </section>
       </main>
