--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
           <section class="recommendations">
             <h2 class="visually-hidden">Рекомендации</h2>
             <div class="recommendations__item">
-              <h3 class="recommendations__title">Жилье</h3>
+              <h3 class="recommendations__title recommendations__title--house">Жилье</h3>
               <p class="recommendations__description">
                 Рекомендуем пожить в настоящем мотеле, все как в кино!
               </p>
             </div>
-            <div class="recommendations__item recommendations__item--souvenirs">
-              <h3 class="recommendations__title">Сувениры</h3>
+            <div class="recommendations__item recommendations__item--gift">
+              <h3 class="recommendations__title recommendations__title--gift">Сувениры</h3>
               <p class="recommendations__description">
                 Не только китайского,<br> но и местного производства!
               </p>
             </div>
             <div class="recommendations__item">
-              <h3 class="recommendations__title">Еда</h3>
+              <h3 class="recommendations__title recommendations__title--burger">Еда</h3>
               <p class="recommendations__description">
                 Всегда заказывайте фирменный бургер, вы не разочаруетесь!
               </p>
@@ -151,19 +151,19 @@
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link social__link--twitter button" href="#"><span class="visually-hidden">Мы в Твиттере</span></a>
+              <a class="social__link social__link--twitter button" href="#"><svg class="social__link--icon-twitter" width="18" height="14"><use xlink:href="img/sprite.svg#icon-twitter"></use></svg><span class="visually-hidden">Мы в Твиттере</span></a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--facebook button" href="#"><span class="visually-hidden">Мы в Фейсбуке</span></a>
+              <a class="social__link social__link--facebook button" href="#"><svg class="social__link--icon-facebook" width="9" height="18"><use xlink:href="img/sprite.svg#icon-facebook"></use></svg><span class="visually-hidden">Мы в Фейсбуке</span></a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--youtube button" href="#"><span class="visually-hidden">Мы в Ютубе</span></a>
+              <a class="social__link social__link--youtube button" href="#"><svg class="social__link--icon-youtube" width="20" height="14"><use xlink:href="img/sprite.svg#icon-youtube"></use></svg><span class="visually-hidden">Мы в Ютубе</span></a>
             </li>
           </ul>
         </div>
         <div class="page-footer__copyright copyright">
           <p class="copyright__text">Разработано</p>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span></a>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><svg class="copyright__link-icon" width="27" height="34"><use xlink:href="img/sprite.svg#htmlacademy"></use></svg><span class="visually-hidden">HTML Academy</span></a>
         </div>
       </footer>
     </div>
