Оптимизировать векторную графику - исправление#3

--- a/form.html
+++ b/form.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Форма отзыва</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
     <script src="js/picturefill.js"></script>
   </head>
   <body>
     <div style="display:none">
       <include src="build/img/sprite.svg"></include>
-    <div>
+    </div>
     <div class="container">
       <header class="page-header">
         <nav class="page-header__nav">
@@ -169,7 +169,7 @@
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
             <span class="visually-hidden">HTML Academy</span>
             <svg class="copyright__logo-htmlacademy" width="27" height="34">
-              <use xlink:href="#logo-htmlacademy"></use>
+              <use xlink:href="#icon-logo-htmlacademy"></use>
             </svg>
           </a>
         </div>
