--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Седона</title>
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <script src="js/picturefill.js"></script>
   </head>
   <body>
@@ -51,29 +51,23 @@
           </b>
           <h2 class="reasons__header">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h2>
           <div class="reasons__wrapper">
-            <div class="reasons__item reasons__item--town">
+            <div class="reasons__item reasons__item--city">
               <h3 class="reasons__title">Настоящий городок</h3>
               <p class="reasons__description">
-                &mdash; №1 &mdash;
+                &ndash; №1 &ndash;
               </p>
               <p class="reasons__description">
                 Седона не аттракцион для туристов, там течет своя жизнь
               </p>
             </div>
-            <picture class="reasons__picture">
-              <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.webp 1x, img/main-city-desktop@2x.webp 2x">
-              <source type="image/webp" media="(min-width: 768px)" srcset="img/main-city-tablet@1x.webp 1x, img/main-city-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/main-city-mobile@1x.webp 1x, img/main-city-mobile@2x.webp 2x">
-              <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg 1x, img/main-city-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg 1x, img/main-city-tablet@2x.jpg 2x">
-              <img class="reasons__image reasons__image--town" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg 2x" width="320" height="260" alt="Настоящий городок">
-            </picture>
+            <div class="reasons__background-city">
+            </div>
           </div>
           <section class="recommendations">
             <h2 class="visually-hidden">Рекомендации</h2>
             <div class="recommendations__item recommendations__item--house">
               <h3 class="recommendations__title">
-                <svg class="recommendations__icon-house">
+                <svg class="recommendations__icon-house" width="75" height="72">
                   <use xlink:href="#icon-house"></use>
                 </svg>
                 Жилье
@@ -84,7 +78,7 @@
             </div>
             <div class="recommendations__item recommendations__item--gift">
               <h3 class="recommendations__title">
-                <svg class="recommendations__icon-gift">
+                <svg class="recommendations__icon-gift" width="63" height="75">
                   <use xlink:href="#icon-gift"></use>
                 </svg>
                 Сувениры
@@ -95,7 +89,7 @@
             </div>
             <div class="recommendations__item recommendations__item--burger">
               <h3 class="recommendations__title">
-                <svg class="recommendations__icon-burger">
+                <svg class="recommendations__icon-burger" width="76" height="69">
                   <use xlink:href="#icon-burger"></use>
                 </svg>
                 Еда
@@ -109,26 +103,20 @@
             <div class="reasons__item reasons__item--bridge">
               <h3 class="reasons__title">Там есть<br> мост дьявола</h3>
               <p class="reasons__description">
-                &mdash; №2 &mdash;
+                &ndash; №2 &ndash;
               </p>
               <p class="reasons__description">
                 Да, по нему можно пройти! Если вы осмелитесь, конечно
               </p>
             </div>
-            <picture class="reasons__picture">
-              <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.webp 1x, img/main-bridge-desktop@2x.webp 2x">
-              <source type="image/webp" media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.webp 1x, img/main-bridge-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/main-bridge-mobile@1x.webp 1x, img/main-bridge-mobile@2x.webp 2x">
-              <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg 1x, img/main-bridge-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
-              <img class="reasons__image reasons__image--bridge" src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@2x.jpg 2x" width="320" height="260" alt="Мост дьявола">
-            </picture>
+            <div class="reasons__background-bridge">
+            </div>
           </div>
           <div class="reasons__wrapper">
             <div class="reasons__item">
               <h3 class="reasons__title">Небольшая площадь</h3>
               <p class="reasons__description">
-                &mdash; №3 &mdash;
+                &ndash; №3 &ndash;
               </p>
               <p class="reasons__description">
                 Все интересные места находятся очень близко
@@ -137,7 +125,7 @@
             <div class="reasons__item">
               <h3 class="reasons__title reasons__title--width">Красивая дорога</h3>
               <p class="reasons__description">
-                &mdash; №4 &mdash;
+                &ndash; №4 &ndash;
               </p>
               <p class="reasons__description">
                 Ехать в Седону из Лас-Вегаса совсем не скучно!
@@ -146,7 +134,7 @@
             <div class="reasons__item">
               <h3 class="reasons__title reasons__title--width">Мало туристов</h3>
               <p class="reasons__description">
-                &mdash; №5 &mdash;
+                &ndash; №5 &ndash;
               </p>
               <p class="reasons__description">
                 Большинство едет в Гранд Каньон и толпится там
@@ -159,7 +147,9 @@
           <p class="hotel-search__description">
             Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне
           </p>
-          <a class="hotel-search__button button" href="#">Найти гостиницу</a>
+          <a class="hotel-search__button button" href="#"><!-- for the "disabled" state, add the class "hotel-search__button-disabled"-->
+            Найти гостиницу
+          </a>
           <div class="hotel-search__map" id="yandex-map">
           </div>
         </section>
