--- a/photo.html
+++ b/photo.html
@@ -200,9 +200,9 @@
             <div class="video__wrapper">
               <button class="video__toddler" type="button">
                 <span class="visually-hidden">Ползунок</span>
-                <div class="video__scale">
-                  <div class="video__point"></div>
-                </div>
+                <span class="video__scale">
+                  <span class="video__point"></span>
+                </span>
               </button>
               <button class="video__replay" type="button">
                 <span class="visually-hidden">Повторное воспроизведение</span>
