--- a/form.html
+++ b/form.html
@@ -69,13 +69,13 @@
             <div class="form__item contacts">
               <h3 class="form__title form__title--contacts">Контактная информация:</h3>
               <div class="contacts__wrapper">
-                <label class="contacts__label" for="phone">
+                <label class="contacts__label" for="tel">
                   <span class="contacts__visually-hidden">Контактный </span>телефон<sup>*</sup>:
                   <svg class="contacts__icon-phone" width="18" height="18">
                     <use xlink:href="#icon-phone"></use>
                   </svg>
                 </label>
-                <input class="contacts__input" type="tel" id="phone" name="phone" placeholder="Введите телефон" required>
+                <input class="contacts__input" type="tel" id="tel" name="tel" placeholder="Введите телефон" required>
               </div>
               <div class="contacts__wrapper">
                 <label class="contacts__label" for="email">
