Финальная проверка попытка №2

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <p class="hotel-search__description">
             Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне
           </p>
-          <a class="hotel-search__button button" href="#"><!-- for the "disabled" state, add the class "hotel-search__button-disabled"-->
+          <a class="hotel-search__button button" href="#"><!-- add the class "hotel-search__button-disabled" for the "disabled" state -->
             Найти гостиницу
           </a>
           <div class="hotel-search__map" id="yandex-map">
